# WhistleBlower-Logos-

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  README_CHRONICLE_REGISTRY.md  chronicle-registry-idl.json  flake.nix  integration-test.toml  metadata.json  scaffold.toml  spel.toml
.github/workflows/: ci.yml
batch-anchor/: .gitignore  Cargo.toml  README.md  batch-anchor.it.toml  batch-anchor.toml  docker-compose.yml
batch-anchor/src/: config.rs
batch-anchor/src/batch/: mod.rs
batch-anchor/src/cmd/: init.rs  lookup.rs  node.rs  watch.rs
batch-anchor/src/delivery/: client.rs  envelope.rs
batch-anchor/src/registry/: state.rs  types.rs
chronicle_registry_core/: Cargo.toml
chronicle_registry_core/src/: lib.rs
docs/: api.md
ffi/: Cargo.toml
ffi/src/: lib.rs
logos-chronicle/: README.md  flake.nix
logos-chronicle/docs/: anchoring.md  api.md  metadata-envelope.md
logos-chronicle/scripts/: logoscore-anchor-smoke.sh  logoscore-broadcast-smoke.sh  logoscore-publish-smoke.sh
logos-chronicle/src/: chronicle_anchor_config.cpp  chronicle_plugin.h
logos-chronicle/tests/: CMakeLists.txt  test_chronicle.cpp
logos-whistleblower/: README.md
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: logoscore-anchor-smoke.sh  logoscore-broadcast-smoke.sh  logoscore-publish-smoke.sh  logoscore-storage-smoke.sh  run-app.sh  setup.sh
src/: chronicle_anchor_client.cpp  chronicle_anchor_client.h  chronicle_anchor_config.cpp  chronicle_interface.h  chronicle_plugin.cpp  chronicle_plugin.h  whistleblower.rep  whistleblower_plugin.cpp  whistleblower_plugin.h
src/qml/: Main.qml
