# Own workspace declaration — keeps the FFI deps (LEZ runtime client libs) out
# of the parent chronicle-registry workspace, which only needs the guest-side
# deps. Mirrors whisper-wall's ui/ffi setup.
[workspace]

[package]
name = "chronicle_registry_ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI for the chronicle-registry SPEL program. Loaded by chronicle (the Logos basecamp module) to submit on-chain anchor transactions."

[lib]
name = "chronicle_registry_ffi"
crate-type = ["cdylib"]

[dependencies]
# LEZ runtime — must match chronicle-registry/methods/guest's pin (v0.2.0-rc3)
# so off-chain and on-chain instruction wire formats agree.
nssa                  = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core             = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common                = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
wallet                = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }

# Local: types from the on-chain crate. `Registry` + `CidRecord` + `MAX_BATCH`.
chronicle_registry_core = { path = "../chronicle_registry_core" }

borsh       = "1.5"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
hex         = "0.4"
tokio       = { version = "1", features = ["rt", "rt-multi-thread"] }
